--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,45 +9,47 @@
     <title>Игра для мишика</title>
 </head>
 
-    <div class="game">
-        <div class="bear_gray"></div> <!--bear_brown bear_gray bear_white -->
-        <div class="candy"></div> <!--cake candy ice_cream-->
-    </div>
-    <table>
-        <caption><b>Выбор</b></caption>
-        <thead>
-            <tr>
-                <th>Кто играет?</th>
-                <th>Что будет кушать?</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>
-                    <input type="radio" id="bear_color_choice_1" name="bear_color" value="brown" checked>
-                    <label for="bear_color_choice_1">Коричневый мишик</label>
-                </td>
-                <td><input type="radio" id="sweets_choice_1" name="Sweets" value="cake" checked>
-                    <label for="sweets_choice_1">Торт</label>
-                </td>
-            </tr>
-            <tr>
-                <td><input type="radio" id="bear_color_choice_2" name="bear_color" value="gray">
-                    <label for="bear_color_choice_2">Серенький мишик</label>
-                </td>
-                <td><input type="radio" id="sweets_choice_2" name="Sweets" value="candy">
-                    <label for="sweets_choice_2">Конфеты</label>
-                </td>
-            </tr>
-            <tr>
-                <td><input type="radio" id="bear_color_choice_3" name="bear_color" value="white">
-                    <label for="bear_color_choice_3">Беленький мишик</label>
-                </td>
-                <td><input type="radio" id="sweets_choice_3" name="Sweets" value="ice_cream">
-                    <label for="sweets_choice_3">Мороженое</label>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+<div class="game">
+    <div id="bear" class="bear_brown"></div> <!--bear_brown bear_gray bear_white -->
+    <div id="sweets" class="cake"></div> <!--cake candy ice_cream-->
+</div>
+<table>
+    <caption><b>Выбор</b></caption>
+    <thead>
+        <tr>
+            <th>Кто играет?</th>
+            <th>Что будет кушать?</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+                <input type="radio" id="bear_color_choice_1" name="bear_color" value="bear_brown" checked>
+                <label for="bear_color_choice_1">Коричневый мишик</label>
+            </td>
+            <td><input type="radio" id="sweets_choice_1" name="Sweets" value="cake" checked>
+                <label for="sweets_choice_1">Торт</label>
+            </td>
+        </tr>
+        <tr>
+            <td><input type="radio" id="bear_color_choice_2" name="bear_color" value="bear_gray">
+                <label for="bear_color_choice_2">Серенький мишик</label>
+            </td>
+            <td><input type="radio" id="sweets_choice_2" name="Sweets" value="candy">
+                <label for="sweets_choice_2">Конфеты</label>
+            </td>
+        </tr>
+        <tr>
+            <td><input type="radio" id="bear_color_choice_3" name="bear_color" value="bear_white">
+                <label for="bear_color_choice_3">Беленький мишик</label>
+            </td>
+            <td><input type="radio" id="sweets_choice_3" name="Sweets" value="ice_cream">
+                <label for="sweets_choice_3">Мороженое</label>
+            </td>
+        </tr>
+        <script src="/Bear/app.js"></script>
+    </tbody>
+</table>
 </body>
+
 </html>
